--- a/Task3/task3.html
+++ b/Task3/task3.html
@@ -9,29 +9,25 @@
 </head>
 <body>
     <div class="mainbox">
-        
-        <section class="text">
-            <p class="boldtxt">Get <span>insights</span> that help your business grow</p> 
-            <p>Discover the benefits of data analytics and make better
-                decisions regarding revenue,customer experience,  and overall efficiency </p>
-            <ul>
-                <li>10k+</li>
-                <li>314</li>
-                <li>12m+</li>
-            </ul>
-            <ul>
-                <li>COMPANIES</li>
-                <li>TEMPLATES</li>
-                <li>QUERIES</li>
-            </ul>
-            </section>
-        <section class="img">
+        <div class="text_part">
+            <p class="bold_text">Get <span>insights</span> that help your business grow</p>
+            <p class="normal_text">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+            <div class="statics">
+                <div class="static"><span>10k+</span> COMPANIES</div>
+                <div class="static"><span>314</span> TEMPLATES</div>
+                <div class="static"><span>12M+</span>  QUERIES</div>
+            </div>
+
+        </div>
+        <div class="img_part">
             <img src="Screenshot 2023-03-17 171932.png" alt="">
 
-        </section>
 
+        </div>
     </div>
 
+
+   
     
 </body>
 </html>
